--- a/themes/wearther/source/css/_partial/article.styl
+++ b/themes/wearther/source/css/_partial/article.styl
@@ -250,6 +250,16 @@ icon-gap = 10px
     width 45%
     font-size 1.5em
 
+.l-more-link
+  margin-top 1em
+
+.more-link
+  color color-meta
+  font-size 0.9em
+  &:hover
+    color color-link
+    text-decoration none
+
 .post-content-footer
   border-top 1px solid color-border
   color color-meta
@@ -265,9 +275,7 @@ icon-gap = 10px
       font 1.1em font-icon
       padding-right 10px
       vertical-align middle
-    &.more-link
-      &:before
-        content '\f054'
+
 
 .comment
   &:before
@@ -342,3 +350,7 @@ icon-gap = 10px
     color #da6a25
   &:active
     color #da6a25
+
+.l-screenshot
+  margin-top 20px
+  margin-bottom 20px
