--- a/themes/wearther/layout/_widget/subscribe.ejs
+++ b/themes/wearther/layout/_widget/subscribe.ejs
@@ -9,7 +9,7 @@
     <% } %>
     <% if (theme.subscribe.facebook){ %>
       <li>
-        <div class="fb-like" data-href="https://www.facebook.com/<%- theme.subscribe.facebook %>" data-width="The pixel width of the plugin" data-height="26px" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>
+        <div class="fb-like" data-href="https://www.facebook.com/<%- theme.subscribe.facebook %>" data-height="26px" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>
       </li>
     <% } %>
     <% if (theme.subscribe.twitter){ %>
