--- a/themes/wearther/source/css/_base/layout.styl
+++ b/themes/wearther/source/css/_base/layout.styl
@@ -14,12 +14,15 @@ h1, h2, h3, h4, h5, h6
 
 h1
   font-size 1.8em
+  line-height 1.1em
 
 h2
   font-size 1.5em
+  line-height 1.1em
 
 h3
   font-size 1.3em
+  line-height 1em
 
 a
   text-decoration none
