--- a/themes/wearther/layout/_partial/head.ejs
+++ b/themes/wearther/layout/_partial/head.ejs
@@ -40,7 +40,7 @@
     <meta property="og:image" content="<%= config.cover %>"/>
   <% } %>
 
-  <link href="<%- config.root %>favicon.png" rel="icon">
+  <link href="<%- config.root %>img/favicon.png" rel="icon">
   <!-- favicons -->
   <!-- Metro -->
   <meta name="msapplication-TileColor" content="#393737">
