--- a/themes/wearther/source/css/_partial/article.styl
+++ b/themes/wearther/source/css/_partial/article.styl
@@ -63,7 +63,7 @@ icon-gap = 10px
 
 .l-post-icon // match header title
   position absolute
-  margin-top 0.5em
+  margin-top 20px
   font-size icon-size
   left 0 - (icon-size + icon-gap)
   top 0
