--- a/themes/wearther/source/css/_partial/syntax.styl
+++ b/themes/wearther/source/css/_partial/syntax.styl
@@ -72,6 +72,8 @@ figure.highlight
     border-left 1px solid #fff
     color #666
 
+  .comment::before
+    content ""
 pre
   // Theme: Solarized - Light
   // More theme here: http://softwaremaniacs.org/media/soft/highlight/test.html
